# PackageItTest

./: MANIFEST.in  README.rst  requirements.txt  requirements_test.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug.md  config.yaml
.github/workflows/: release.yml
.packageit/: packageit.ini  release.toml
docs/source/: api.rst  conf.py  donotexist.rst  index.rst
src/packageittest/: __init__.py  packageittest.py
tests/: conftest.py  test_packageittest.py
