[metadata]
name = PackageItTest
version = 0.0.0
author = Ann Other
author_email = ann.other@testmodule.com
description = Insert project description here
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers = 
	Development Status :: 1 - Planning
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	Topic :: Software Development
	Topic :: System :: Systems Administration
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.0
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
install_requires = 
	termcolor
setup_requires = 
	termcolor
tests_require = 
	pip
	wheel
	pre-commit
	pytest
	beetools
	pytest-cov
	sphinx
	sphinx-autobuild
	sphinx-rtd-theme
	black
	build
	configparserext
	pygithub
package_dir = 
	=src
packages = find:

[options.packages.find]
where = src

[flake8]
exclude = __init__.py, VersionArchive /, Archive /
max-line-length = 120

[tool:pytest]
addopts = --ignore-glob=*/VersionArchive --ignore-glob=*/Archive  --cov-report=html

